--- a/index.html
+++ b/index.html
@@ -7,30 +7,41 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Space+Mono:ital,wght@0,400;0,700;1,400&family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Merriweather:ital,wght@0,300;0,400;0,700;1,400&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
           extend: {
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
-              mono: ['"Space Mono"', 'monospace'],
-              serif: ['Cinzel', 'serif'],
+              mono: ['"JetBrains Mono"', 'monospace'],
+              serif: ['Merriweather', 'serif'],
             },
             colors: {
-              space: {
-                900: '#0b0d17',
-                800: '#151932',
-                700: '#1f2544',
+              // "Dark Academia" / Research Lab Palette
+              slate: {
+                900: '#0f172a', // Main Background
+                800: '#1e293b', // Panels
+                700: '#334155', // Borders
+                600: '#475569', // Subtle Borders
               },
-              starlight: '#fdf6e3',
-              a2a: {
-                gold: '#d4af37',
-                accent: '#00f0ff',
+              paper: {
+                100: '#f1f5f9', // Text Light
+                200: '#e2e8f0', // Text Muted
+              },
+              gold: {
+                500: '#d4af37', // Academic Gold
+                400: '#e6c25e', // Hover
               }
             },
             animation: {
-              'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'fade-in': 'fadeIn 0.5s ease-out',
+            },
+            keyframes: {
+              fadeIn: {
+                '0%': { opacity: '0' },
+                '100%': { opacity: '1' },
+              }
             }
           }
         }
@@ -38,22 +49,22 @@
     </script>
     <style>
       body {
-        background-color: #0b0d17;
-        color: #fdf6e3;
+        background-color: #0f172a;
+        color: #e2e8f0;
       }
-      /* Custom scrollbar for that sci-fi feel */
+      /* Professional scrollbar */
       ::-webkit-scrollbar {
         width: 6px;
       }
       ::-webkit-scrollbar-track {
-        background: #0b0d17; 
+        background: #0f172a; 
       }
       ::-webkit-scrollbar-thumb {
-        background: #1f2544; 
+        background: #334155; 
         border-radius: 3px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #d4af37; 
+        background: #475569; 
       }
     </style>
   <script type="importmap">
