--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>A2A World | Galactic Storybook</title>
     <!-- Placeholder for Runtime Environment Injection -->
     <!--__ENV__-->
@@ -55,17 +55,18 @@
       body {
         background-color: #0f172a;
         color: #e2e8f0;
+        overflow: hidden; /* Prevent body scroll, handle inside app */
       }
       /* Professional scrollbar */
       ::-webkit-scrollbar {
-        width: 6px;
+        width: 4px;
       }
       ::-webkit-scrollbar-track {
         background: #0f172a; 
       }
       ::-webkit-scrollbar-thumb {
         background: #334155; 
-        border-radius: 3px;
+        border-radius: 2px;
       }
       ::-webkit-scrollbar-thumb:hover {
         background: #475569; 
